--- a/Mobile/CellsNibs/MainRunesBuildTableViewCell.xib
+++ b/Mobile/CellsNibs/MainRunesBuildTableViewCell.xib
@@ -42,21 +42,21 @@
                             <constraint firstAttribute="height" constant="70" id="vYD-j9-oyG"/>
                         </constraints>
                     </imageView>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="8300" translatesAutoresizingMaskIntoConstraints="NO" id="e8d-qv-v0w">
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="8400" translatesAutoresizingMaskIntoConstraints="NO" id="e8d-qv-v0w">
                         <rect key="frame" x="38" y="23" width="30" height="30"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="30" id="Amd-fC-dF8"/>
                             <constraint firstAttribute="height" constant="30" id="Qgz-hM-nj8"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="252" misplaced="YES" text="RESOLVE" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X4B-YQ-cK8">
-                        <rect key="frame" x="98" y="16" width="219" height="15.5"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="252" text="RESOLVE" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X4B-YQ-cK8">
+                        <rect key="frame" x="98" y="16" width="214" height="15.5"/>
                         <fontDescription key="fontDescription" name="BeaufortforLOL-Bold" family="BeaufortforLOL-Bold" pointSize="12"/>
                         <color key="textColor" red="0.63137254901960782" green="0.83529411764705885" blue="0.52549019607843139" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" verticalCompressionResistancePriority="749" misplaced="YES" text="Durability and crowd control" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="5" translatesAutoresizingMaskIntoConstraints="NO" id="rm4-dy-Dgq">
-                        <rect key="frame" x="98" y="39" width="219" height="11"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" verticalCompressionResistancePriority="749" text="Durability and crowd control" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="5" translatesAutoresizingMaskIntoConstraints="NO" id="rm4-dy-Dgq">
+                        <rect key="frame" x="98" y="39" width="214" height="11"/>
                         <fontDescription key="fontDescription" name="Spiegel-Regular" family="Spiegel" pointSize="9"/>
                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
@@ -122,7 +122,7 @@ Haste: 20% increased Movement Speed</string>
                         <fontDescription key="fontDescription" name="Spiegel-Regular" family="Spiegel" pointSize="10"/>
                         <inset key="contentEdgeInsets" minX="8" minY="2" maxX="8" maxY="2"/>
                         <state key="normal" title="Why">
-                            <color key="titleColor" red="0.19215686274509802" green="0.27058823529411763" blue="0.14901960784313725" alpha="1" colorSpace="calibratedRGB"/>
+                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         </state>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
@@ -143,7 +143,7 @@ Haste: 20% increased Movement Speed</string>
                         <fontDescription key="fontDescription" name="Spiegel-Regular" family="Spiegel" pointSize="10"/>
                         <inset key="contentEdgeInsets" minX="8" minY="2" maxX="8" maxY="2"/>
                         <state key="normal" title="Why">
-                            <color key="titleColor" red="0.19215686269999999" green="0.27058823529999998" blue="0.14901960780000001" alpha="1" colorSpace="calibratedRGB"/>
+                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         </state>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
@@ -196,7 +196,7 @@ Haste: 20% increased Movement Speed</string>
                         <fontDescription key="fontDescription" name="Spiegel-Regular" family="Spiegel" pointSize="10"/>
                         <inset key="contentEdgeInsets" minX="8" minY="2" maxX="8" maxY="2"/>
                         <state key="normal" title="Why">
-                            <color key="titleColor" red="0.19215686269999999" green="0.27058823529999998" blue="0.14901960780000001" alpha="1" colorSpace="calibratedRGB"/>
+                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         </state>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
@@ -249,7 +249,7 @@ Haste: 20% increased Movement Speed</string>
                         <fontDescription key="fontDescription" name="Spiegel-Regular" family="Spiegel" pointSize="10"/>
                         <inset key="contentEdgeInsets" minX="8" minY="2" maxX="8" maxY="2"/>
                         <state key="normal" title="Why">
-                            <color key="titleColor" red="0.19215686269999999" green="0.27058823529999998" blue="0.14901960780000001" alpha="1" colorSpace="calibratedRGB"/>
+                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         </state>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
@@ -337,11 +337,38 @@ Haste: 20% increased Movement Speed</string>
             </tableViewCellContentView>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
-            <point key="canvasLocation" x="-174" y="243.5"/>
+            <connections>
+                <outlet property="mainDescription" destination="rm4-dy-Dgq" id="cf6-zd-mUA"/>
+                <outlet property="main_border" destination="fFG-Ls-Ju5" id="l5B-wW-LdW"/>
+                <outlet property="main_rune" destination="e8d-qv-v0w" id="gJq-um-gvq"/>
+                <outlet property="main_title" destination="X4B-YQ-cK8" id="C2P-XH-7so"/>
+                <outlet property="main_v_view" destination="ZFn-DL-D14" id="yfj-kR-W0Z"/>
+                <outletCollection property="main_images" destination="tMr-jv-Rls" collectionClass="NSMutableArray" id="Kgi-SR-cIj"/>
+                <outletCollection property="main_images" destination="dwm-DB-ag8" collectionClass="NSMutableArray" id="Wli-K2-3g9"/>
+                <outletCollection property="main_images" destination="AbT-iA-KFR" collectionClass="NSMutableArray" id="3Hv-M5-eIm"/>
+                <outletCollection property="main_images" destination="DkQ-w3-MR8" collectionClass="NSMutableArray" id="DSQ-6t-qgv"/>
+                <outletCollection property="main_titles" destination="X1l-3Z-5At" collectionClass="NSMutableArray" id="bfl-Sk-7Du"/>
+                <outletCollection property="main_titles" destination="iyU-wl-Sgq" collectionClass="NSMutableArray" id="Egf-du-aoU"/>
+                <outletCollection property="main_titles" destination="iAC-Ej-ahp" collectionClass="NSMutableArray" id="DHr-SR-9cW"/>
+                <outletCollection property="main_titles" destination="6Nx-8k-Jem" collectionClass="NSMutableArray" id="wKh-Tm-irv"/>
+                <outletCollection property="main_description" destination="tQa-xq-3xl" collectionClass="NSMutableArray" id="gU3-ZC-EuR"/>
+                <outletCollection property="main_description" destination="5k8-et-Fmd" collectionClass="NSMutableArray" id="kgN-d8-opn"/>
+                <outletCollection property="main_description" destination="z0o-Yg-aDl" collectionClass="NSMutableArray" id="NxF-zg-gRx"/>
+                <outletCollection property="main_description" destination="trs-pn-AUr" collectionClass="NSMutableArray" id="JN2-oY-vIk"/>
+                <outletCollection property="why_description" destination="UY9-vU-aQ5" collectionClass="NSMutableArray" id="PUU-FU-has"/>
+                <outletCollection property="why_description" destination="tS1-U2-VUL" collectionClass="NSMutableArray" id="sht-n7-dQy"/>
+                <outletCollection property="why_description" destination="SNE-5f-zn0" collectionClass="NSMutableArray" id="wdV-3u-kf8"/>
+                <outletCollection property="why_description" destination="T4q-kz-Nfp" collectionClass="NSMutableArray" id="ncc-eL-W6j"/>
+                <outletCollection property="why_style" destination="fUn-Aq-2px" collectionClass="NSMutableArray" id="wda-yl-LfH"/>
+                <outletCollection property="why_style" destination="ov9-UE-7V1" collectionClass="NSMutableArray" id="4PM-vt-ABe"/>
+                <outletCollection property="why_style" destination="nae-hK-C8C" collectionClass="NSMutableArray" id="YJt-cR-waE"/>
+                <outletCollection property="why_style" destination="FtV-Nf-Kwb" collectionClass="NSMutableArray" id="jcc-oN-JZt"/>
+            </connections>
+            <point key="canvasLocation" x="-283" y="205"/>
         </tableViewCell>
     </objects>
     <resources>
-        <image name="8300" width="85" height="85"/>
+        <image name="8400" width="85" height="85"/>
         <image name="8463" width="108" height="108"/>
         <image name="8465" width="256" height="256"/>
         <image name="resolve_border" width="412" height="427"/>
